fix: improve Ackee tooltip display on small screen
Since I translated to French, the text did not fit into container on
small screens. It is not perfect, but I plan to replace Ackee so...

--- a/src/components/FormElements/Field/Field.module.scss
+++ b/src/components/FormElements/Field/Field.module.scss
@@ -1,4 +1,5 @@
 @use "@styles/abstracts/functions" as fun;
+@use "@styles/abstracts/mixins" as mix;
 
 .field {
   background: var(--color-bg-tertiary);
@@ -28,8 +29,12 @@
 }
 
 .select {
-  padding: fun.convert-px(3) var(--spacing-xs);
+  padding: var(--spacing-2xs) var(--spacing-xs);
   cursor: pointer;
+
+  @include mix.pointer("fine") {
+    padding: fun.convert-px(3) var(--spacing-xs);
+  }
 
   &:hover {
     box-shadow: fun.convert-px(4) fun.convert-px(4) 0 fun.convert-px(1)
